# SpeechScribe

./: .replit  app.py  audio_utils.py  google_transcription.py  main.py  models.py  pyproject.toml  replit.nix  transcription.py
static/css/: style.css
static/js/: upload.js
templates/: base.html  index.html
