[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.66.3",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.1",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "sqlalchemy>=2.0.39",
    "platformio>=6.1.18",
]
